--- a/learn-about-me/package.json
+++ b/learn-about-me/package.json
@@ -2,10 +2,13 @@
   "name": "learn-about-me",
   "private": true,
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "nodemon app.js",
+    "test": "mocha --recursive"
   },
   "author": "Aaron Lam",
   "devDependencies": {
+    "chai": "^4.1.2",
+    "mocha": "^4.0.1",
     "nodemon": "^1.13.3"
   },
   "dependencies": {
